--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-	<title>Mi web con estética de 2008</title>
+	<title>Pregunta al Fotomaton XD</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 
 <body>
